--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,25 +1,11 @@
 # Use an official Python runtime as a parent image
-<<<<<<< HEAD
-FROM python:3.9-slim
-
-# Set the working directory in the container
-WORKDIR /app
-
-# Copy requirements and install dependencies
-COPY app/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy the app source code
-COPY app/ .
-
-# Expose port and start the app
-EXPOSE 8000
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
-=======
 FROM python:3.10
 
 # Set the working directory
 WORKDIR /app
+
+# Install system dependencies for MongoDB drivers
+RUN apt-get update && apt-get install -y libsnappy-dev && apt-get clean
 
 # Copy requirements and install dependencies
 COPY app/requirements.txt requirements.txt
@@ -33,4 +19,3 @@ EXPOSE 8000
 
 # Run the application
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
->>>>>>> e37a76d (Updated backend with new features and fixed file tracking)
