--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,14 @@
     "uuid": "^11.0.5"
   },
   "devDependencies": {
+    "@types/react": "^19.0.9",
+    "@types/react-dom": "^19.0.3",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "typescript": "^5.7.3",
     "vite": "^6.1.0"
   },
   "scripts": {
