Initial commit with new repository

--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -3,13 +3,13 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
+    "module": "CommonJS",  // Change this from ESNext to CommonJS
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",  // Change from bundler to node
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
